<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".data.ThirdFragment">

    <TextView
        android:id="@+id/third_textview_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_third_fragment"
        app:layout_constraintBottom_toTopOf="@+id/third_previous"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/third_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/go_second"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/third_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/go_first"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/third_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/third_next"
        app:layout_constraintEnd_toStartOf="@+id/third_next"
        app:layout_constraintStart_toEndOf="@+id/third_previous"
        app:layout_constraintTop_toBottomOf="@+id/third_textview_welcome" />

    <EditText
        android:id="@+id/third_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="177dp"
        android:ems="10"
        android:hint="@string/arguman_ekle"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/third_next"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintStart_toEndOf="@+id/third_previous"
        app:layout_constraintTop_toBottomOf="@+id/third_previous"
        app:layout_constraintVertical_bias="1.0"
        android:autofillHints="" />
</androidx.constraintlayout.widget.ConstraintLayout>